# Mobile-C-Genetic-Algorithm

./: .gitmodules  CMakeLists.txt  agent.c  convo_state_diagram.dia  convo_state_machine.c  convo_state_machine.h  gene.cpp  gene.h  newscast.c  newscast.cpp  newscast.h  server.c  server.cpp  server.h
cmake/Modules/: Findembedch.cmake  Findmobilec.cmake
